# elevenlabs-sfx

./: .coverage  PROJECT_SPECIFICATION.md  README.md  pyproject.toml
.clinerules/: documentation_maintenance.md
tests/: test_client.py
